Fix header z-index
NGW-1826

--- a/nextgisweb/pyramid/nodepkg/layout/header/Header.less
+++ b/nextgisweb/pyramid/nodepkg/layout/header/Header.less
@@ -13,6 +13,7 @@
     &::before {
         position: absolute;
         opacity: 0.1;
+        z-index: -1;
         inset: 0;
         background-color: var(--primary);
         content: "";
